Revert "Use the latest temperature read as base for headroom calculation"
This reverts commit 436e7d8bc035b11a6627cd82df3856c5f15371ab.

Reason for revert: <Dorid monitor: Likely culprit for b/346904307  - verifying through ABTD before revert submission. This is part of the standard investigation process, and does not mean your CL will be reverted.>

Change-Id: Ife94d7148df3d47634c97564f81171059c82df04